Header fixes:
- attribution
- don't put component styles in SASS
- make the header only cover the left sidebar on each page, not part of
  the map too, to match Figma
- revert changes to test
- put the alpha header closer to the banner

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -18,11 +18,3 @@
     @extend .govuk-link
   ul
     @extend .govuk-list, .govuk-list--bullet
-
-body
-  margin-top: 0
-
-.below-header
-  position: relative
-  top: 66px
-  height: calc(100vh - 66px)
